deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ansvue
  labels:
    app: ansvue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ansvue
  template:
    metadata:
      labels:
        app: ansvue
    spec:
      containers:
      - name: ansvue
        image: docker.io/insignficant/ansible-vue:0.0.9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
